--- a/less/sections.less
+++ b/less/sections.less
@@ -886,6 +886,8 @@ footer {
 		text-align: center;
 		margin: auto;
 		background-color: #FFEA00;
+		position: relative;
+		top: 8em;
 
 		h1 {
 			color: #1B4660;
@@ -899,6 +901,29 @@ footer {
 
 	.brown-footer {
 		background-color: #212121;
+		margin: 0;
+		color: white;
+		height: 20em;
+		text-align: center;
+
+		.text-container {
+			position: relative;
+			width: 50em;
+			text-align: center;
+			top: 10em;
+			left: 25em;
+
+			p {
+				font-size: .7rem;
+				font-weight: 100;
+			}
+
+			p.copywrite {
+				margin-top: 8em;
+				font-size: 0.6rem;
+				font-weight: 100;
+			}
+		}
 	}
 }
 
